# magma

./: .gitignore  Cargo.toml  README.md  build.rs  confg.example.toml  go.mod  go.sum  main.go  moss.yaml
assets/: config.toml  config.v1.toml
connection/: handshake.go  incoming.go  login.go  manager.go  outgoing.go  player.go  status.go
constants/: state.go  version.go
models/: config.go  serverstatus.go
protocol/: connection.go  connection_manager.go  encryption.go  handshake.go  login.go  status.go
src/: bridge.rs  client.rs  config.rs  cryptor.rs  io.rs  main.rs  protocol.rs  proxy.rs  server.rs
src/bridge/: downstream.rs  mod.rs  upstream.rs
src/config/: mod.rs  v1.rs
src/io/: async.rs  mod.rs  sync.rs
utils/: auth.go  crypt.go  rand.go
