[package]
name = "moss"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
anyhow = "1"
async-trait = "0.1"
cfb8 = "0.8"
clap = { version = "4", features = ["derive"] }
mc_chat = "0.3"
minecraft-data-rs = "0.7"
miniz_oxide = "0.6"
rand = "0.8"
rsa = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
