[package]
name = "magma"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
ansi_term = "0.12"
anyhow = "1"
async-trait = "0.1"
cfb8 = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
mc_chat = { version = "0.3", features =["serde"] }
minecraft-data-rs = "0.7"
miniz_oxide = "0.7"
rand = "0.8"
rsa = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"

[build-dependencies]
vergen = "7"
